writable/eksekusi/1234567/error.txt
Main.java:5: error: '.class' expected
        int b=
            ^
1 error
